--- a/zadaca/alert.html
+++ b/zadaca/alert.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="alert1.js"></script>
     <title>Document</title>
+    <style> 
+    #answer { 
+        width: 250px;
+        height: 50px;
+    }
+    </style>
 </head>
 <body>
     <input type="number" name="number" id="number"/>
     <button id="guess" onclick="guess()">Guess me!</button> </br> </br>
+	<textarea id="answer"></textarea>
+	</br> </br>
 </body>
 </html>
